[package]
name = "demonstrator"
version = "0.1.0"
edition = "2024"

[lib]
name = "demonstrator"
path = "src/lib.rs"

[[bin]]
name = "demonstrator"
path = "src/main.rs"


[target.'cfg(target_arch = "x86_64")'.dependencies]
macroquad = "0.4.13"

[target.'cfg(not(target_arch = "x86_64"))'.dependencies]
blinkt = "0.7.1"
